now /request is secured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=wallbox-service
 
-# INVerter
+# wallBOX (8 0 10)
 server.port=8010
 
 #tomcat
 server.tomcat.basedir=tomcatlogs
 server.tomcat.accesslog.enabled=true
+
+#logging.level.org.springframework.security=DEBUG
 
 # save data to file
 app.savefilename=/home/wallbox/wallbox_data.dat
