--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>net.aahso.homehausen</groupId>
 	<artifactId>wallbox-service</artifactId>
-	<version>0.0.1</version>
+	<version>0.1.0</version>
 	<name>wallbox-service</name>
 	<description>Wallbox Micro Service</description>
 	<url/>
@@ -55,12 +55,16 @@
   			<artifactId>spring-boot-configuration-processor</artifactId>
   			<optional>true</optional>
 		</dependency>
+		<dependency>	
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
- 
 	  	<dependency>  
     		<groupId>com.fazecast</groupId>  
     		<artifactId>jSerialComm</artifactId>  
